added some utilities to global.css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,6 +41,99 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+
+  container: {
+    center: true;
+    padding: "2rem";
+
+    screens: {
+      "2xl": "1400px";
+    }
+  }
+
+  colors: {
+    border: "oklch(var(--border))";
+    input: "oklch(var(--input))";
+    ring: "oklch(var(--ring))";
+    background: "oklch(var(--background))";
+    foreground: "oklch(var(--foreground))";
+
+    primary: {
+      DEFAULT: "oklch(var(--primary))";
+      foreground: "oklch(var(--primary-foreground))";
+    }
+
+    secondary: {
+      DEFAULT: "oklch(var(--secondary))";
+      foreground: "oklch(var(--secondary-foreground))";
+    }
+
+    destructive: {
+      DEFAULT: "oklch(var(--destructive))";
+      foreground: "oklch(var(--destructive-foreground))";
+    }
+
+    muted: {
+      DEFAULT: "oklch(var(--muted))";
+      foreground: "oklch(var(--muted-foreground))";
+    }
+
+    accent: {
+      DEFAULT: "oklch(var(--accent))";
+      foreground: "oklch(var(--accent-foreground))";
+    }
+
+    popover: {
+      DEFAULT: "oklch(var(--popover))";
+      foreground: "oklch(var(--popover-foreground))";
+    }
+
+    card: {
+      DEFAULT: "oklch(var(--card))";
+      foreground: "oklch(var(--card-foreground))";
+    }
+  }
+
+  borderRadius: {
+    lg: "var(--radius)";
+    md: "calc(var(--radius) - 2px)";
+    sm: "calc(var(--radius) - 4px)";
+  }
+
+  keyframes: {
+    "accordion-down": {
+      from: {
+        height: "0"
+      }
+
+      ;
+
+      to: {
+        height: "var(--radix-accordion-content-height)"
+      }
+
+      ;
+    }
+
+    "accordion-up": {
+      from: {
+        height: "var(--radix-accordion-content-height)"
+      }
+
+      ;
+
+      to: {
+        height: "0"
+      }
+
+      ;
+    }
+  }
+
+  animation: {
+    "accordion-down": "accordion-down 0.2s ease-out";
+    "accordion-up": "accordion-up 0.2s ease-out";
+  }
 }
 
 :root {
@@ -120,4 +213,31 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.fade-layer {
+  mask-image: linear-gradient(to top,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 1) 20%,
+      rgba(0, 0, 0, 1) 80%,
+      rgba(0, 0, 0, 0));
+}
+
+.fade-layer--size {
+  mask-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1) 20%);
+}
+
+.text-radial {
+  background-image: radial-gradient(ellipse farthest-side,
+      rgba(115, 32, 221, 0.2) 20%,
+      transparent 85%);
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.snippet--gradient {
+  background-image: linear-gradient(to bottom,
+      rgba(0, 0, 0, 0),
+      rgba(23, 23, 23, 1));
 }
