--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,10 +44,10 @@
 
   container: {
     center: true;
-    padding: "2rem";
+    padding: 2rem;
 
     screens: {
-      "2xl": "1400px";
+      2xl: 1400px;
     }
   }
 
@@ -131,8 +131,8 @@
   }
 
   animation: {
-    "accordion-down": "accordion-down 0.2s ease-out";
-    "accordion-up": "accordion-up 0.2s ease-out";
+    accordion-down: accordion-down 0.2s ease-out;
+    accordion-up: accordion-up 0.2s ease-out;
   }
 }
 
@@ -240,4 +240,32 @@
   background-image: linear-gradient(to bottom,
       rgba(0, 0, 0, 0),
       rgba(23, 23, 23, 1));
+}
+
+@keyframes accordion-down {
+  from {
+    height: 0;
+  }
+
+  to {
+    height: var(--radix-accordion-content-height);
+  }
+}
+
+@keyframes accordion-up {
+  from {
+    height: var(--radix-accordion-content-height);
+  }
+
+  to {
+    height: 0;
+  }
+}
+
+.animation-accordion-down {
+  animation: accordion-down 0.2s ease-out;
+}
+
+.animation-accordion-up {
+  animation: accordion-up 0.2s ease-out;
 }
